--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:gravity="bottom"
     android:padding="16dp"
-    android:background="@color/blue">
+    android:background="@color/orange">
 
     <ImageView
         android:layout_width="50dp"
